--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "SFND_Lidar_Obstacle_Detection"]
 	path = SFND_Lidar_Obstacle_Detection
 	url = https://github.com/stevenliu216/SFND_Lidar_Obstacle_Detection
+[submodule "SFND_Radar_Target_Generation_and_Detection"]
+	path = SFND_Radar_Target_Generation_and_Detection
+	url = https://github.com/stevenliu216/SFND_Radar_Target_Generation_and_Detection
